# aiolocust

./: README.md  alternative_approach.py  locustfile.py  pyproject.toml
aiolocust/: __init__.py
tests/: test_runner.py
