[project]
name = "aiolocust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.32.5",
]

[project.scripts]
aiolocust="aiolocust:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "aiolocust/**/*"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
    "pyright>=1.1.380",
    "types-boto3>=1.0.2",
    "pytest==8.3.4",
    "requests-mock==1.12.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I001", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[tool.pyright]
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "warning"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"
